--- a/src/main/resources/static/css/CustomCSS/Register.css
+++ b/src/main/resources/static/css/CustomCSS/Register.css
@@ -8,11 +8,15 @@ body{
 
 .bank-logo{
 	margin-top: 10px;
-	text-align: center;
+	height: 120px;
+	/* text-align: center; */
+	position: relative;
 }
-.sbi-img{
+.bank-logo .sbi-img{
 	width: 120px;
 	height: 120px;
+	position: absolute;
+	left: 45%;
 }
 .container-fluid{
 	border: 0px solid;
