--- a/src/main/resources/static/css/CustomCSS/header.css
+++ b/src/main/resources/static/css/CustomCSS/header.css
@@ -15,9 +15,6 @@ body{
 	width: 100%;
 	height: auto;
 }
-.navcontainer .hamburger-icon{
-	display: none;
-}
 .imagecontainer{
 	float: left;
 	margin-top: auto;
@@ -104,23 +101,96 @@ body{
 	color: #fff;
 	text-decoration: none;
 }
+#hamburger-icon{
+	display: none;
+}
 
+.profileView{
+	display: none;
+  	position: absolute;
+  	background-color: #f1f1f1;
+  	min-width: 160px;
+  	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  	z-index: 1;
+	margin-top: 50px;
+	margin-left: 5%;
+}
+.profileView img{
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	border-radius: 20px;
+}
+
+.profileView a{
+	color: black;
+  	padding-top: 2px;
+  	text-decoration: none;
+  	display: block;
+	text-align: left;
+	padding-left: 15px;
+	margin-bottom: 5px;
+}
+#signout{
+	margin-bottom: 8px;
+}
+.profileView hr{
+	margin-left: 10%;
+	margin-right: 10%;
+	margin-bottom: 10px;
+	margin-top: 15px;
+}
+
+.greetingsdiv:hover .profileView{
+	display: block;
+}
 
 @media screen and (max-width: 749px){
-	.navcontainer .hamburger-icon{
-		display: block;
-		float: right;
-		margin-left: auto;
-		margin-right: 5px;
-		margin-top: 17px;
+	.navcontainer{
+		width: auto;
 	}
 	.sub-navcontainer{
+		width: auto;
+		height: auto;
+		float: right;
+	}
+	.sub-navcontainer div:not(:last-child){
 		display: none;
 	}
+	/*#accounts, #investment-deposit,
+	#loans, #cards, #digital, #information-service{
+		display: none;
+	}*/
+	#hamburger-icon{
+		display: table;
+		width: auto;
+		margin-top: 10px;
+		margin-right: 5px;
+	}
+	
 	.navcontainer .greetingsdiv{
 		display: none;
 	}
+
+	.sub-navcontainer.responsive{
+		display: contents;
+	}
+	.sub-navcontainer.responsive #hamburger-icon{
+		position: absolute;
+		right: 0;
+		top: 0;
+		height: auto;
+	}
+	.sub-navcontainer.responsive div{
+		float: none;
+		display: block;
+		text-align: left;
+	}
 }
+
+
 
 @media screen and (min-width: 770px) and (max-width: 1122px){
 	.sub-navcontainer div img{
